--- a/src/main/resources/public/template/report/reportTemplateEdit.html
+++ b/src/main/resources/public/template/report/reportTemplateEdit.html
@@ -34,7 +34,7 @@
             </div>
             <div class="flex-column z-edit-row">
                 <label class="z-switch">
-                    <input type="checkbox" id="automatic" name="automatic" onchange="setAutomatic('popTab',this)"
+                    <input type="checkbox" id="automatic" name="automatic"
                            th:checked="${template?.automatic == true}">
                     <span></span>
                     <span class="label" th:text="#{report.label.automatic}"></span>
@@ -44,7 +44,6 @@
                 <div class="under-bar">
                     <label>
                         <span th:text="#{report.label.chart}"></span>
-                        <span class="required"></span>
                     </label>
                 </div>
                 <div id="details" class="template">
@@ -53,12 +52,12 @@
                             <span class="z-icon i-plus"></span>
                         </button>
                     </div>
-                    <div id="chartList"></div>
+                    <div id="chartList" class="chart"></div>
                 </div>
             </div>
             <div class="flex-row justify-content-between z-edit-row">
                 <div class="z-button-list">
-                    <a class="z-button secondary" href="/report/template/search" th:text="#{common.btn.list}"></a>
+                    <a class="z-button secondary" href="/reports/template/search" th:text="#{common.btn.list}"></a>
                 </div>
                 <div class="z-button-list">
                     <button class="z-button primary" th:if="${template == null}" sec:authorize="hasAuthority('report.create')"
@@ -66,7 +65,7 @@
                     <button class="z-button primary" th:if="${template?.templateId}" sec:authorize="hasAuthority('report.update')"
                             onclick="actionTemplate('put')" th:text="#{common.btn.modify}"></button>
                     <button class="z-button secondary" th:if="${template?.templateId}" sec:authorize="hasAuthority('report.delete')"
-                            th:disabled="${!template.enabled}" onclick="actionTemplate('delete')" th:text="#{common.btn.delete}"></button>
+                            onclick="actionTemplate('delete')" th:text="#{common.btn.delete}"></button>
                 </div>
             </div>
         </div>
@@ -77,9 +76,13 @@
     <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
+        const STATUS_SUCCESS = '0';
+        const STATUS_ERROR_TEMPLATE_NAME_DUPLICATION = '1';
+        const chartList = /*[[${chartList}]]*/ null;
         window.onload = function () {
             aliceJs.initDesignedSelectTag();
 
+            console.log(chartList)
             OverlayScrollbars(document.querySelectorAll('.edit'), { className: 'scrollbar' });
             OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
                 className: 'scrollbar',
@@ -96,20 +99,58 @@
         function addChart() {
             //사용자 정의 차트 목록으로 selectbox 생성
             let target = document.querySelector('#chartList');
-            console.log(target)
+            console.log(chartList)
+
+            const options = chartList.data.map(function (option) {
+                return `<option value="${option.chartId}">${aliceJs.filterXSS(option.chartName)}</option>`;
+            }).join('');
+            let rowId = ZWorkflowUtil.generateUUID();
             let rowElement =
                 `<div class="flex-row mt-2">` +
-                `<div class="flex-column col-9"><select><option>ffff</option></select></div>` +
-                `</div>`
+                `<div class="flex-column col-9"><select name="chart" id="${rowId}_chart">${options}</select></div>` +
+                `<div class="flex-column col-1"><button id="${rowId}_delete" type="button" class="z-button-icon extra"><span class="z-icon i-delete"></span></button></div>` +
+                `</div>`;
             target.insertAdjacentHTML('beforeend', rowElement);
+
+            const deleteBtn = document.getElementById(rowId + '_delete');
+            deleteBtn.addEventListener('click', function (e) {
+                e.stopPropagation();
+                this.parentElement.parentElement.remove();
+            });
         }
 
         function actionTemplate(method) {
-            console.log(method)
-        }
+            if (method === 'post' || method === 'put') {
+                if (isValidRequiredAll()) {
+                    let data = {
+                        templateId: '',
+                        templateName: document.querySelector('#templateName').value,
+                        templateDesc: document.querySelector('#templateDesc').value,
+                        automatic: document.querySelector('#automatic').checked
+                    }
+                    let url = '/rest/reports/template';
+                    if (method === 'put') {
+                        url += '/' + /*[[${template?.templateId}]]*/'';
+                        data.templateId = /*[[${template?.templateId}]]*/'';
+                    }
 
-        function setAutomatic() {
+                    let charts = []
+                    let chartElement = document.querySelector('#chartList')
+                    chartElement.querySelectorAll('select[name=chart]').forEach((item) => {
+                        let chart = {
+                            id: item.value
+                        }
+                        charts.push(chart);
+                    });
+                    data.charts = charts
+                    console.log(data)
+                    return false;
 
+                    restSubmit(method, url, data);
+                }
+            } else if (method === 'delete') {
+                aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/reports/template/' + /*[[${template?.templateId}]]*/'');
+            }
         }
 
         function restSubmit(method, url, data) {
@@ -119,6 +160,33 @@
                 params: JSON.stringify(data),
                 contentType: 'application/json',
                 callbackFunc: function(response) {
+                    let result = JSON.parse(response.responseText);
+                    if (method === 'post' || method === 'put') {
+                        switch (result.code) {
+                            case STATUS_SUCCESS:
+                                aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function () {
+                                    location.href = '/reports/template/search';
+                                });
+                                break;
+                            case STATUS_ERROR_TEMPLATE_NAME_DUPLICATION:
+                                aliceAlert.alertSuccess(i18n.msg('report.msg.templateNameUsed'));
+                                break;
+                            default :
+                                aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
+                                break;
+                        }
+                    } else if (method === 'delete'){
+                        switch (result.code) {
+                            case STATUS_SUCCESS:
+                                aliceAlert.alertSuccess(i18n.msg('common.msg.delete'), function () {
+                                    location.href = '/reports/template/search';
+                                });
+                                break;
+                            default:
+                                aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
+                                break;
+                        }
+                    }
                 }
             };
             aliceJs.sendXhr(opt);
