--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -6156,20 +6156,10 @@ body.modal-active {
 .modal-dialog.token-list .modal-content .cmdb-class-attribute-list .table-set table .z-list-body .instance-list,
 .modal-dialog.token-list .modal-content .related-instance-list .table-set table .z-list-body .attribute-list,
 .modal-dialog.token-list .modal-content .related-instance-list .table-set table .z-list-body .instance-list {
-  display: table;
+  display: flex;
   width: 100%;
   height: 3.125rem;
   line-height: 3.125rem;
-}
-.modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .z-list-body .attribute-list > td,
-.modal-dialog.cmdb-class-attribute-modal .modal-content .cmdb-class-attribute-list .table-set table .z-list-body .instance-list > td,
-.modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list .table-set table .z-list-body .attribute-list > td,
-.modal-dialog.cmdb-class-attribute-modal .modal-content .related-instance-list .table-set table .z-list-body .instance-list > td, .modal-dialog.token-list .modal-content .cmdb-class-attribute-list .table-set table .z-list-body .attribute-list > td,
-.modal-dialog.token-list .modal-content .cmdb-class-attribute-list .table-set table .z-list-body .instance-list > td,
-.modal-dialog.token-list .modal-content .related-instance-list .table-set table .z-list-body .attribute-list > td,
-.modal-dialog.token-list .modal-content .related-instance-list .table-set table .z-list-body .instance-list > td {
-  display: inline-block;
-  vertical-align: middle;
 }
 .modal-dialog.chart-edit-modal {
   width: 62.5rem;
