--- a/src/main/resources/public/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/scss/theme/default/_modal.scss
@@ -191,14 +191,10 @@
               overflow-y: auto;
               .attribute-list,
               .instance-list {
-                display: table;
+                display: flex;
                 width: 100%;
                 height: 3.125rem; // 50px
                 line-height: 3.125rem; // 50px
-                & > td {
-                  display: inline-block; // 말줄임 적용을 위해 추가
-                  vertical-align: middle;
-                }
               }
             }
           }
