--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -1465,10 +1465,12 @@ table tr td, table tr th {
 .z-table tr.z-table-head {
   height: 2rem;
   font-weight: 500;
-  text-indent: 1rem;
   border-top: 0.0625rem solid #CFD5D9;
   border-bottom: calc(0.0625rem * 2) solid #CFD5D9;
   background-color: #F5F5F5;
+}
+.z-table tr th, .z-table tr td {
+  padding: 0 0.5rem;
 }
 
 span {
