--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -93,11 +93,12 @@ table {
     &.z-table-head {
       height: 2rem; // 32px
       font-weight: $table-head-font-weight;
-      text-indent: $element-indent;
       @include border($element-border-width, solid, $element-border-color, top);
       @include border(calc(#{$element-border-width} * 2), solid, $element-border-color, bottom);
       background-color: $table-head-bg-color;
     }
+
+    th, td {padding: 0 0.5rem}
   }
 }
 // span
