--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -78,10 +78,10 @@
             <thead>
             <tr class="z-table-head flex-row align-items-center">
                 <th style="width: 40%;" class="align-left" th:text="#{cmdb.ci.label.relatedDocument}"></th>
-                <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.createUser}"></th>
-                <th style="width: 20%;" class="align-left" th:text="#{cmdb.ci.label.applyDate}"></th>
-                <th style="width: 10%;" class="align-left" th:text="#{cmdb.ci.label.status.type}"></th>
-                <th style="width: 10%;" class="align-left" th:text="#{cmdb.ci.label.whetherToInterlink}"></th>
+                <th style="width: 20%;" class="align-center" th:text="#{cmdb.ci.label.createUser}"></th>
+                <th style="width: 20%;" class="align-center" th:text="#{cmdb.ci.label.applyDate}"></th>
+                <th style="width: 10%;" class="align-center" th:text="#{cmdb.ci.label.status.type}"></th>
+                <th style="width: 10%;" class="align-center" th:text="#{cmdb.ci.label.whetherToInterlink}"></th>
             </tr>
             </thead>
             <tbody>
@@ -92,12 +92,12 @@
             <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(ciHistoryList)}" th:each="ciHistory: ${ciHistoryList}">
                 <td th:if="${#strings.isEmpty(ciHistory.documentNo)}" style="width: 40%;" class="align-left" th:text="#{common.label.emptyData}"></td>
                 <td th:unless="${#strings.isEmpty(ciHistory.documentNo)}" style="width: 40%;" th:text="${ciHistory.documentNo}"></td>
-                <td th:if="${#strings.isEmpty(ciHistory.createUser)}" style="width: 20%;" class="align-left" th:text="#{common.label.emptyData}"></td>
-                <td th:unless="${#strings.isEmpty(ciHistory.createUser)}" style="width: 20%;" th:text="#{ciHistory.createUser}"></td>
-                <td style="width: 20%;" class="date-time" th:text="${ciHistory.applyDt}"></td>
-                <td style="width: 10%;" class="align-left" th:text="#{|cmdb.ci.label.status.${ciHistory.ciStatus}|}"></td>
-                <td th:if="${ciHistory.interlink == true}" style="width: 10%;" class="align-left" th:text="#{cmdb.ci.label.interlink}"></td>
-                <td th:unless="${ciHistory.interlink == true}" style="width: 10%;" class="align-left" th:text="#{cmdb.ci.label.nonInterlink}"></td>
+                <td th:if="${#strings.isEmpty(ciHistory.createUser)}" style="width: 20%;" class="align-center" th:text="#{common.label.emptyData}"></td>
+                <td th:unless="${#strings.isEmpty(ciHistory.createUser)}" style="width: 20%;" class="align-center" th:text="#{ciHistory.createUser}"></td>
+                <td style="width: 20%;" class="date-time align-center" th:text="${ciHistory.applyDt}"></td>
+                <td style="width: 10%;" class="align-center" th:text="#{|cmdb.ci.label.status.${ciHistory.ciStatus}|}"></td>
+                <td th:if="${ciHistory.interlink == true}" style="width: 10%;" class="align-center" th:text="#{cmdb.ci.label.interlink}"></td>
+                <td th:unless="${ciHistory.interlink == true}" style="width: 10%;" class="align-center" th:text="#{cmdb.ci.label.nonInterlink}"></td>
             </tr>
             </tbody>
         </table>
