--- a/src/main/resources/public/template/token/tokenTab.html
+++ b/src/main/resources/public/template/token/tokenTab.html
@@ -9,8 +9,10 @@
     <h5 class="z-token-tab align-center pointer" data-target-contents="tokenComment" th:text="#{common.label.comment}"></h5>
     <h5 class="z-token-tab align-center pointer" data-target-contents="tokenTag" th:text="#{common.label.tag}"></h5>
 </div>
+<!-- 탭 영역 -->
 <div class="z-token-panels">
     <div class="z-token-panel on" id="tokenInformation">
+        <!-- 문서이력 -->
         <div class="z-token-history">
             <label class="z-token-history-sub-title" th:text="#{token.label.history}"></label>
             <table class="z-token-history-table">
@@ -33,6 +35,7 @@
                 </tbody>
             </table>
         </div>
+        <!-- 관련문서 -->
         <div class="z-token-related">
             <label class="z-token-related-sub-title" th:text="#{token.label.relatedInstance}"></label>
             <th:block th:each="rInstance: ${relatedInstance}">
@@ -46,13 +49,10 @@
                                     <h6 th:text="${rInstance.documentNo}"></h6>
                                 </div>
                             </a>
-                            <!-- 편집 가능할 경우에만 버튼이 표시됨 -->
-                            <th:block th:if="${mode} == 'edit'">
-                                <button type="button" class="z-button-icon"
-                                        th:onclick="zFormToken.removeRelatedDoc({ folderId: [[${rInstance.folderId}]], instanceId: [[${rInstance.instanceId}]] })">
-                                    <span class="z-icon i-delete"></span>
-                                </button>
-                            </th:block>
+                            <button type="button" class="z-button-icon"
+                                    th:onclick="zFormToken.removeRelatedDoc({ folderId: [[${rInstance.folderId}]], instanceId: [[${rInstance.instanceId}]] })">
+                                <span class="z-icon i-delete"></span>
+                            </button>
                         </div>
                         <div class="z-document-row-topic">
                             <h6 class="text-ellipsis" th:each="topic: ${rInstance.topics}" th:text="${topic}"></h6>
@@ -80,6 +80,7 @@
             </th:block>
         </div>
     </div>
+    <!-- 댓글 -->
     <div class="z-token-panel z-token-comment" id="tokenComment">
         <th:block th:each="comment : ${commentList}">
             <div class="z-token-comment-item flex-column" th:id="'comment' + ${comment.commentId}">
@@ -106,6 +107,7 @@
             <button class="z-button secondary" th:onclick="zFormToken.saveComment()" th:text="#{common.btn.register}" th:disabled="${mode == 'view'}"></button>
         </div>
     </div>
+    <!-- 태그 -->
     <div class="z-token-panel z-token-tag" id="tokenTag">
         <div class="tag-input">
             <input type="text" class="z-input" id="tokenTags" th:value="${tagList}" th:readonly="${mode == 'view'}" />
