--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -206,12 +206,16 @@
                     if (isNotEmpty('searchValue')) {
                         const searchValue = document.getElementById('searchValue').value;
                         document.querySelectorAll('.z-card-row > .z-card-item-box > .z-card-item-title > a').forEach(function(data) {
-                            let searchTarget = data.innerHTML;
+                            data.innerHTML = data.innerHTML.replace(new RegExp(searchValue, 'gi'), (matchedText) => {
+                                return '<span class="keyword">' + matchedText + '</span>';
+                            })
+
+                            /*let searchTarget = data.innerHTML;
                             const regex = new RegExp(searchValue, 'gi');
                             console.log(regex.lastIndex);
                             const matchTarget = searchTarget.match(regex);
                             const resultTarget = regex.exec(searchTarget);
-                            /*if ( matchTarget !== null) {
+                            if ( matchTarget !== null) {
                                 for (let i in matchTarget) {
                                     for (let j in matchTarget) {
                                         // const startIndex = regex.lastIndex;
