--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -34,8 +34,10 @@
                 <span class="required"></span>
             </label>
             <select id="taskStatus" required="required">
-                <option value="true" th:text="#{scheduler.status.true}" th:selected="true == ${schedule?.useYn}"></option>
-                <option value="false" th:text="#{scheduler.status.false}" th:selected="false == ${schedule?.useYn}"></option>
+                <option value="true" th:text="#{scheduler.status.true}"
+                        th:selected="true == ${schedule?.useYn}"></option>
+                <option value="false" th:text="#{scheduler.status.false}"
+                        th:selected="false == ${schedule?.useYn}"></option>
             </select>
         </div>
         <div class="flex-column z-edit-row">
@@ -76,7 +78,8 @@
                     <span th:text="#{scheduler.label.src}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" class="z-input" id="src" maxlength="250" required="required" th:value="${schedule?.src}"/>
+                <input type="text" class="z-input" id="src" maxlength="250" required="required"
+                       th:value="${schedule?.src}"/>
             </div>
             <div class="flex-column z-edit-row">
                 <label>
@@ -119,7 +122,8 @@
             </select>
         </div>
         <!-- executeCycleType: fixed_delay, fixed_rate -->
-        <div id="executeCycleType-cron-container" class="flex-column z-edit-row" th:style="${schedule?.executeCycleType == 'cron' ? '' : 'display: none'}">
+        <div id="executeCycleType-cron-container" class="flex-column z-edit-row"
+             th:style="${schedule?.executeCycleType == 'cron' ? '' : 'display: none'}">
             <label for="cronExpression">
                 <span th:text="#{scheduler.label.cronExpression}"></span>
                 <span class="required"></span>
@@ -127,30 +131,39 @@
             <input type="text" class="z-input" id="cronExpression" required="required" maxlength="100"
                    th:value="${schedule?.cronExpression}"/>
         </div>
-        <div id="executeCycleType-fixed-container" class="flex-column z-edit-row" th:style="${schedule?.executeCycleType != 'cron' ? '' : 'display: none'}">
+        <div id="executeCycleType-fixed-container" class="flex-column z-edit-row"
+             th:style="${schedule?.executeCycleType != 'cron' ? '' : 'display: none'}">
             <label for="executeCyclePeriod">
                 <span th:text="#{scheduler.label.executeCyclePeriod}"></span>
                 <span class="required"></span>
             </label>
             <input type="text" class="z-input" id="executeCyclePeriod" required="required" maxlength="10"
-                   th:value="${schedule?.executeCyclePeriod}" onkeydown="return onlyNumber(event)" onkeyup="aliceJs.removeChar(event)"/>
+                   th:value="${schedule?.executeCyclePeriod}" onkeydown="return onlyNumber(event)"
+                   onkeyup="aliceJs.removeChar(event)"/>
         </div>
         <div class="flex-row justify-content-between z-edit-row">
             <div class="z-button-list">
                 <a class="z-button secondary" href="/schedulers/search" th:text="#{common.btn.list}"></a>
             </div>
             <div class="z-button-list">
-                <button class="z-button primary" th:if="${schedule == null}" sec:authorize="hasAuthority('scheduler.create')"
+                <button class="z-button primary" th:if="${schedule == null}"
+                        sec:authorize="hasAuthority('scheduler.create')"
                         onclick="actionScheduler('post')" th:text="#{common.btn.register}"></button>
-                <button class="z-button primary" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.update')"
-                        th:disabled="${!schedule.editable}" onclick="actionScheduler('put')" th:text="#{common.btn.modify}">
+                <button class="z-button primary" th:if="${schedule != null}"
+                        sec:authorize="hasAuthority('scheduler.update')"
+                        th:disabled="${!schedule.editable}" onclick="actionScheduler('put')"
+                        th:text="#{common.btn.modify}">
                 </button>
-                <button class="z-button secondary" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.delete')"
-                        th:disabled="${!schedule.editable}" onclick="actionScheduler('delete')" th:text="#{common.btn.delete}">
+                <button class="z-button secondary" th:if="${schedule != null}"
+                        sec:authorize="hasAuthority('scheduler.delete')"
+                        th:disabled="${!schedule.editable}" onclick="actionScheduler('delete')"
+                        th:text="#{common.btn.delete}">
                 </button>
-                <button class="z-button secondary" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.execute')"
+                <button class="z-button secondary" th:if="${schedule != null}"
+                        sec:authorize="hasAuthority('scheduler.execute')"
                         onclick="actionScheduler('execute')" th:text="#{scheduler.btn.immediatelyExecute}"></button>
-                <button class="z-button secondary" th:if="${schedule != null}" sec:authorize="hasAuthority('scheduler.read')"
+                <button class="z-button secondary" th:if="${schedule != null}"
+                        sec:authorize="hasAuthority('scheduler.read')"
                         onclick="openHistoryViewModal()" th:text="#{scheduler.btn.history}"></button>
             </div>
         </div>
@@ -164,7 +177,7 @@
     const STATUS_ERROR_SCHEDULE_NAME_DUPLICATION = '2';
     const STATUS_ERROR_SCHEDULER_EXECUTE = '3';
 
-    window.onload = function() {
+    window.onload = function () {
         changeContainer(document.getElementById('taskType').value);
         changeContainer(document.getElementById('executeCycleType').value);
         OverlayScrollbars(document.getElementById('#type-query-container'), {
@@ -195,7 +208,7 @@
     /** 작업 유형, 실행 유형에 따른 입력 화면 출력 **/
     function changeContainer(type) {
         let tooltipElems = document.getElementById('tooltipContent').childNodes;
-        for (let i = 1; i < tooltipElems.length; i+=2) {
+        for (let i = 1; i < tooltipElems.length; i += 2) {
             tooltipElems[i].style.display = 'none';
         }
         if (type === 'class') {
@@ -235,7 +248,7 @@
                 content: i18n.msg('common.btn.close'),
                 classes: 'z-button secondary',
                 bindKey: false,
-                callback: function(modal) {
+                callback: function (modal) {
                     modal.hide();
                 }
             }],
@@ -337,9 +350,15 @@
 
     /** 조건에 따른 필수값 체크 **/
     function isValidRequired() {
-        if (isEmpty('taskName', 'common.msg.requiredEnter')) { return false; }
-        if (isEmpty('taskStatus', 'common.msg.requiredEnter')) { return false; }
-        if (isEmpty('taskType', 'common.msg.requiredEnter')) { return false; }
+        if (isEmpty('taskName', 'common.msg.requiredEnter')) {
+            return false;
+        }
+        if (isEmpty('taskStatus', 'common.msg.requiredEnter')) {
+            return false;
+        }
+        if (isEmpty('taskType', 'common.msg.requiredEnter')) {
+            return false;
+        }
         const taskType = document.getElementById('taskType').value;
         if (taskType === 'class') {
             if (isEmpty('executeClass', 'common.msg.requiredEnter')) {
@@ -350,15 +369,25 @@
                 return false;
             }
         } else { // query
-            if (isEmpty('executeQuery', 'common.msg.requiredEnter')) { return false; }
+            if (isEmpty('executeQuery', 'common.msg.requiredEnter')) {
+                return false;
+            }
         }
         const executeCycleType = document.getElementById('executeCycleType').value;
         if (executeCycleType === 'cron') {
-            if (isEmpty('cronExpression', 'common.msg.requiredEnter')) { return false; }
-            if (cronSplit('cronExpression')) { return false; }
+            if (isEmpty('cronExpression', 'common.msg.requiredEnter')) {
+                return false;
+            }
+            if (cronSplit('cronExpression')) {
+                return false;
+            }
         } else { // fixedDelay, fixedRate
-            if (isEmpty('executeCyclePeriod', 'common.msg.requiredEnter')) { return false; }
-            if (isExistMinValue('executeCyclePeriod', 60000, 'common.msg.minValue')) { return false; }
+            if (isEmpty('executeCyclePeriod', 'common.msg.requiredEnter')) {
+                return false;
+            }
+            if (isExistMinValue('executeCyclePeriod', 60000, 'common.msg.minValue')) {
+                return false;
+            }
         }
         return true;
     }
@@ -368,7 +397,7 @@
         let elem = document.getElementById(cronExpression);
         let regex = new RegExp(/^(\*|([1-5]?[0-9])) (\*|([1-5]?[0-9])) (\*|(1[0-9]|2[0-3])) (\*|([12]?[0-9]|3[0-1])) (\*|([1-9]|1[0-2])|(jan)|(feb)|(mar)|(apr)|(may)|(jun)|(jul)|(aug)|(sep)|(oct)|(nov)|(dec)) (\*|([0-6])|(sun)|(mon)|(tue)|(wed)|(thu)|(fri)|(sat))$/i);
         let cronValue = elem.value.replace(/ +/g, " ").trim().split(' '); //공백 제거 및 배열로 저장
-        const callback = (typeof callbackFunc ==='function') ? callbackFunc : function () {
+        const callback = (typeof callbackFunc === 'function') ? callbackFunc : function () {
             elem.focus();
         };
 
@@ -384,8 +413,8 @@
         elem.value = cronValue.join(' ');
 
         if (!regex.test(elem.value)) {
-                zAlert.warning(i18n.msg('scheduler.msg.cronError'), callback);
-                return true;
+            zAlert.warning(i18n.msg('scheduler.msg.cronError'), callback);
+            return true;
         }
 
         return false;
@@ -398,7 +427,7 @@
             url: url,
             params: JSON.stringify(data),
             contentType: 'application/json',
-            callbackFunc: function(response) {
+            callbackFunc: function (response) {
                 if (method === 'post' || method === 'put') {
                     switch (response.responseText) {
                         case STATUS_SUCCESS:
@@ -433,6 +462,7 @@
         };
         aliceJs.sendXhr(opt);
     }
+
     /*]]>*/
 </script>
 </html>
