--- a/src/main/resources/public/template/cmdb/ci/ciListModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciListModal.html
@@ -19,7 +19,7 @@
         <tr class="no-data-found-list flex-row align-items-center" th:if="${#arrays.isEmpty(ciList)}">
             <td style="width: 100%;" colspan="9" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
-        <tr class="list-row ci-list" th:id="|ciRow${ciData.ciId}|" th:each="ciData, index: ${ciList}">
+        <tr class="list-row ci-list" th:unless="${#arrays.isEmpty(ciList)}" th:id="|ciRow${ciData.ciId}|" th:each="ciData, index: ${ciList}">
             <td style="width: 5%;" class="align-center text-clip" id="ciId">
                 <label class="z-checkbox" th:for="${index.index}" tabindex="0">
                     <input type="checkbox" th:name="${ciData.ciName}" th:id="${index.index}" th:value="${ciData.ciId}"/>
